# resume-matcher

./: .env.example  .gitignore  API_UPDATE_SUMMARY.md  API_VERIFICATION.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  DEBUG_MODE.md  ERRORS_FIXED.md  ERROR_FIX_LOG.md  HANDOFF.md  LAUNCH_SUCCESS.md  LICENSE  MIGRATION_NOTES.md  PRESENTATION_CONTENT.txt  PRESENTATION_OUTLINE.md  PRESENTATION_QUICK_REFERENCE.txt  PRESENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Revolutionizing_Talent_Acquisition_with_AI.pptx  SETUP_YOUR_KEYS.md  STRUCTURED_OUTPUTS_UPGRADE.md  SUBMISSION_CHECKLIST.md  UPGRADE_SUMMARY.md  app.py  fix_llm_matcher.py  pyproject.toml  quick_test.py  run_debug.sh  setup.sh  test_experience_fix.py  test_match_debug.py  test_setup.py
chroma_db/: chroma.sqlite3
config/: __init__.py  config.yaml  settings.py
data/job_descriptions/: senior_ai_engineer.txt
data/vector_store/: chroma.sqlite3
pages/: 1_🎯_Live_Demo.py  4_📦_Batch_Processing.py
src/: __init__.py  llm_matcher.py  matcher.py  models.py  parsers.py  scoring_engine.py  semantic_matcher.py  vector_store.py
src/analytics/: __init__.py  metrics.py  reports.py  roi_calculator.py
src/llm_adapters/: __init__.py  base.py  factory.py  gemini_adapter.py  langchain_gemini.py
ui/: __init__.py
